--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/app.ts",
-    "lint": "eslint \"src/**/*.{ts}\" --quiet ",
+    "eslint": "eslint --ext .ts src",
     "build": "tsc --project src/app.ts"
   },
   "author": "whil",
@@ -20,19 +20,19 @@
     "nodemon": "^2.0.9"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "@typescript-eslint/parser": "^5.3.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/dotenv": "^8.2.0",
-    "eslint": "^8.1.0",
     "@types/express": "^4.17.12",
     "@types/jsonwebtoken": "^8.5.3",
     "@types/mongoose": "^5.11.97",
     "@types/node": "15.x",
     "@types/nodemon": "^1.19.0",
-    "ts-node": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "eslint": "^8.2.0",
     "prettier": "^2.4.1",
+    "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
   }
 }
