--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon src/app.ts",
     "eslint": "eslint --ext .ts src",
-    "build": "tsc --project src/app.ts"
+    "build": "tsc",
+    "start": "node build/src/app.js"
   },
   "author": "whil",
   "license": "ISC",
